--- a/app/components/UI/ui.scss
+++ b/app/components/UI/ui.scss
@@ -21,11 +21,61 @@
     opacity: 0;
     pointer-events: none;
   }
+
+  .section_one__container {
+    // border: 5px solid blue;
+    width: 100%;
+    height: 100%;
+    opacity: 0;
+    // position: relative;
+
+    .section_one__copy {
+      // border: 5px solid pink;
+      width: 70%;
+      height: fit-content;
+      // background-color: white;
+      // display: block;
+      font-family: 'Open sans', sans-serif;
+      position: absolute;
+
+      bottom: 150px;
+      left: 50px;
+
+      h1 {
+        color: #086198;
+        font-size: 4rem;
+        font-weight: 500;
+
+        div {
+          // border: 1px solid red;
+          display: inline-block;
+          float: left;
+          overflow: hidden;
+          padding-right: 15px;
+
+          span {
+            display: inline-block;
+            // transform: translateY(100%);
+            opacity: 0,
+          }
+        }
+      }
+      p {
+        color: #086198;
+        float: left;
+        line-height: 100%;
+        margin: 0;
+        opacity: 0;
+        padding: 0;
+        position: relative;
+        top: -8px;
+        left: -15px;
+      }
+    }
+  }
 }
 
-.section_one {
-  opacity: 0;
-}
+
 // .section_one {
 //   animation: fadeIn 1s ease-out forwards;
 //   animation-delay: 0.2s;
